--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,18 @@ environment:
   sdk: '>=3.1.4 <4.0.0'
 
 dependencies:
-  cloud_firestore: ^4.12.1
-  firebase_core: ^2.20.0
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.3
+  firebase_auth: ^4.13.0
+  cloud_firestore: ^4.13.0
+  firebase_core: ^2.22.0
+  google_sign_in: ^6.1.6
+  font_awesome_flutter: ^10.6.0
+  firebase_storage: ^11.5.0 
+  cupertino_icons: ^1.0.6
+  firebase_app_check: ^0.2.1+4
+
 
 dev_dependencies:
   flutter_test:
