--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,20 @@ dependencies:
   fluttertoast: ^8.2.4
   firebase_auth: ^4.13.0
   cloud_firestore: ^4.13.0
-  firebase_core: ^2.22.0
+  firebase_core: ^2.23.0
   google_sign_in: ^6.1.6
   font_awesome_flutter: ^10.6.0
   firebase_storage: ^11.5.0 
   cupertino_icons: ^1.0.6
   firebase_app_check: ^0.2.1+4
+  mockito: ^5.4.3
+  mocktail: ^1.0.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
