--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  http: ^1.1.2
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - images/new.png
+    - images/no class.png
+    
+    
